--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 
-#root {
-  /* max-width: 1280px; delete */
+/* #root {
+  max-width: 1280px; delete
   margin: 0 auto;
   padding: 2rem;
-  /* text-align: center; */
-}
+  text-align: center;
+} */
 
 .logo {
   will-change: filter;
